--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               the app. The integrated testing features allow for a streamlined
               .
             </p>
-            <button class="btn bg-[#1DD100] text-xl font-bold text-black border-none">
+            <button onclick="paribahanSection()" class="btn bg-[#1DD100] text-xl font-bold text-black border-none">
               Buy Tickets
             </button>
           </div>
@@ -204,12 +204,251 @@
           </div>
         </div>
       </div>
+      <!-- select seats container -->
+      <div class="container mx-auto px-3 lg:px-24 mt-10 grid grid-cols-2">
+        <!-- left side section -->
+        <div class="bg-base-100 p-8">
+          <h4 class="text-2xl font-semibold border-b-2 p-4 border-dashed">
+            Select Your Seat
+          </h4>
+          <!-- seat status container -->
+          <div class="flex justify-between p-4 border-b-2 border-dashed">
+            <div class="flex">
+              <img src="/images/seat-gray.png" alt="" />
+              <h4 class="text-lg font-medium">Available</h4>
+            </div>
+            <div class="flex">
+              <img src="/images/seat-green-filled.png" alt="" />
+              <h4 class="text-[#1DD100] text-lg font-medium">Selected</h4>
+            </div>
+          </div>
 
+          <!-- driver seat kbd -->
+          <div class="flex justify-end my-8">
+            <kbd class="kbd kbd-lg border-none bg-[#0307121A] px-8">
+              <svg width="26.000000" height="26.000000" viewBox="0 0 26 26" fill="none"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                  Created with Pixso.
+                </desc>
+                <defs />
+                <path id="Vector"
+                  d="M1.91333 17.5922C2.5166 19.0481 3.40039 20.371 4.51465 21.4853C5.62891 22.5996 6.9519 23.4835 8.40771 24.0865C9.86377 24.6896 11.4241 25 13 25C14.5759 25 16.1362 24.6896 17.5923 24.0865C19.0481 23.4835 20.3711 22.5996 21.4854 21.4853C22.5996 20.371 23.4834 19.0481 24.0867 17.5922C24.6897 16.1363 25 14.5759 25 13C25 11.4241 24.6897 9.86371 24.0867 8.40781C23.4834 6.9519 22.5996 5.62903 21.4854 4.51471C20.3711 3.40042 19.0481 2.51651 17.5923 1.91345C16.1362 1.31039 14.5759 1 13 1C11.4241 1 9.86377 1.31039 8.40771 1.91345C6.9519 2.51651 5.62891 3.40042 4.51465 4.51471C3.40039 5.62903 2.5166 6.9519 1.91333 8.40781C1.3103 9.86371 1 11.4241 1 13C1 14.5759 1.3103 16.1363 1.91333 17.5922ZM11.1145 14.8856C11.6145 15.3857 12.2927 15.6667 13 15.6667C13.7073 15.6667 14.3855 15.3857 14.8855 14.8856C15.3857 14.3855 15.6667 13.7072 15.6667 13C15.6667 12.2928 15.3857 11.6145 14.8855 11.1144C14.3855 10.6143 13.7073 10.3333 13 10.3333C12.2927 10.3333 11.6145 10.6143 11.1145 11.1144C10.6143 11.6145 10.3333 12.2928 10.3333 13C10.3333 13.7072 10.6143 14.3855 11.1145 14.8856ZM13 15.6667L13 25M10.3333 13L1.33325 10.3333M15.6667 13L24.6667 10.3333"
+                  stroke="#030712" stroke-opacity="0.700000" stroke-width="2.000000" stroke-linejoin="round"
+                  stroke-linecap="round" />
+              </svg>
+            </kbd>
+          </div>
+          <div id="seat-buttons" class="grid grid-cols-2 gap-5">
+            <!-- A -->
+            <div class="flex items-center gap-4">
+              <h2>A</h2>
+              <button id="A1" class="kbd kbd-lg border-none px-12">A1</button>
+              <button id="A2" class="kbd kbd-lg border-none px-12">A2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="A3" class="kbd kbd-lg border-none px-10">A3</button>
+              <button id="A4" class="kbd kbd-lg border-none px-10">A4</button>
+            </div>
+            <!-- B -->
+            <div class="flex items-center gap-4">
+              <h2>B</h2>
+              <button id="B1" class="kbd kbd-lg border-none px-12">B1</button>
+              <button id="B2" class="kbd kbd-lg border-none px-12">B2</bBtton>
+            </div>
+            <div class="flex gap-5">
+              <button id="B3" class="kbd kbd-lg border-none px-10">B3</button>
+              <button id="B4" class="kbd kbd-lg border-none px-10">B4</button>
+            </div>
+            <!-- C -->
+            <div class="flex items-center gap-4">
+              <h2>C</h2>
+              <button id="C1" class="kbd kbd-lg border-none px-12">C1</button>
+              <button id="C2" class="kbd kbd-lg border-none px-12">C2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="C3" class="kbd kbd-lg border-none px-10">C3</button>
+              <button id="C4" class="kbd kbd-lg border-none px-10">C4</button>
+            </div>
+            <!-- D -->
+            <div class="flex items-center gap-4">
+              <h2>D</h2>
+              <button id="D1" class="kbd kbd-lg border-none px-12">D1</button>
+              <button id="D2" class="kbd kbd-lg border-none px-12">D2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="D3" class="kbd kbd-lg border-none px-10">D3</button>
+              <button id="D4" class="kbd kbd-lg border-none px-10">D4</button>
+            </div>
+            <!-- E -->
+            <div class="flex items-center gap-4">
+              <h2>E</h2>
+              <button id="E1" class="kbd kbd-lg border-none px-12">E1</button>
+              <button id="E2" class="kbd kbd-lg border-none px-12">E2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="E3" class="kbd kbd-lg border-none px-10">E3</button>
+              <button id="E4" class="kbd kbd-lg border-none px-10">F4</button>
+            </div>
+            <!-- F -->
+            <div class="flex items-center gap-4">
+              <h2>F</h2>
+              <button id="F1" class="kbd kbd-lg border-none px-12">F1</button>
+              <button id="F2" class="kbd kbd-lg border-none px-12">F2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="F3" class="kbd kbd-lg border-none px-10">F3</button>
+              <button id="F4" class="kbd kbd-lg border-none px-10">F4</button>
+            </div>
+            <!-- G -->
+            <div class="flex items-center gap-4">
+              <h2>G</h2>
+              <button id="G1" class="kbd kbd-lg border-none px-12">G1</button>
+              <button id="G2" class="kbd kbd-lg border-none px-12">G2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="G3" class="kbd kbd-lg border-none px-10">G3</button>
+              <button id="G4" class="kbd kbd-lg border-none px-10">G4</button>
+            </div>
+            <!-- H -->
+            <div class="flex items-center gap-4">
+              <h2>H</h2>
+              <button id="H1" class="kbd kbd-lg border-none px-12">H1</button>
+              <button id="H2" class="kbd kbd-lg border-none px-12">H2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="H3" class="kbd kbd-lg border-none px-10">H3</button>
+              <button id="H4" class="kbd kbd-lg border-none px-10">H4</button>
+            </div>
+            <!-- I -->
+            <div class="flex items-center gap-4">
+              <h2>I</h2>
+              <button id="I1" class="kbd kbd-lg border-none px-12">I1</button>
+              <button id="I2" class="kbd kbd-lg border-none px-12">I2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="I3" class="kbd kbd-lg border-none px-10">I3</button>
+              <button id="I4" class="kbd kbd-lg border-none px-10">I4</button>
+            </div>
+            <!-- J -->
+            <div class="flex items-center gap-4">
+              <h2>J</h2>
+              <button id="J1" class="kbd kbd-lg border-none px-12">J1</button>
+              <button id="J2" class="kbd kbd-lg border-none px-12">J2</button>
+            </div>
+            <div class="flex gap-5">
+              <button id="J3" class="kbd kbd-lg border-none px-10">J3</button>
+              <button id="J4" class="kbd kbd-lg border-none px-10">J4</button>
+            </div>
+
+          </div>
+        </div>
+        <!-- select seats right side -->
+        <div class="bg-base-100 p-8">
+          <h4 class="text-2xl font-semibold border-b-2 p-4 border-dashed">
+            Select Your Seat
+          </h4>
+          <!-- price details -->
+          <div class="bg-[#F7F8F8] p-6 mt-10 rounded-xl">
+            <div class="flex justify-between border-b-2 pb-4 border-dashed">
+              <h3 class="font-medium text-lg">Seat <span id="bookedSeats" class="bg-[#1DD100] text-white">0</span></h3>
+              <h3 class="font-medium text-lg">Class</h3>
+              <h3 class="font-medium text-lg">Price</h3>
+            </div>
+            <!-- selected seats -->
+            <div id="selectedSeats" class="border-b-2 p-4">
+
+            </div>
+            <!-- total price -->
+            <div class="flex justify-between p-4">
+              <h3 class="font-medium text-lg">Total Price</h3>
+              <h3 class="font-medium text-lg">BDT <span id="totalPrice">0</span></h3>
+            </div>
+            <!-- coupon field -->
+            <div class="flex">
+              <input id="couponField" type="text" placeholder="Have any coupon?"
+                class="w-full max-w-xs border-none rounded-s-xl p-3" />
+              <button id="couponApplyBtn" class="btn bg-[#1DD100] text-xl font-semibold text-white border-none">
+                Apply
+              </button>
+            </div>
+            <!-- grand total price -->
+            <div class="flex justify-between p-4">
+              <h3 class="font-medium text-lg">Grand Total</h3>
+              <h3 class="font-medium text-lg">BDT <span id="grandTotal">0</span></h3>
+            </div>
+          </div>
+          <!-- form -->
+          <div class="mt-6 space-y-6">
+            <h3 class="font-medium text-lg">Passenger Name*</h3>
+            <label class="input input-bordered flex items-center gap-2">
+              <input type="text" class="grow" placeholder="Enter your name" />
+            </label>
+            <h3 class="font-medium text-lg">Phone Number*</h3>
+            <label class="input input-bordered flex items-center gap-2">
+              <input id="phoneNumber" type="text" class="grow" placeholder="Enter your phone number" />
+            </label>
+            <h3 class="font-medium text-lg">Email ID</h3>
+            <label class="input input-bordered flex items-center gap-2">
+              <input type="text" class="grow" placeholder="Enter your email id" />
+            </label>
+            <button id="nextBtn" class="btn bg-[#1DD100] text-xl font-semibold text-white border-none w-full" disabled>
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- successful section -->
+    <section>
+      <div id="success" class="flex justify-center mt-20 hidden">
+        <div class="card w-1/2 bg-base-100 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="images/success.png" alt="" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">SUCCESS</h2>
+            <h3>Thank you for Booking Our Bus Seats.
+              We are working hard to find the best service and deals for you.</h3>
+            <p>Shortly you will find a confirmation in your email.</p>
+            <div class="card-actions">
+              <button id="continueBtn" class="btn bg-[#27AE60] text-white">Continue</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
-  <footer>
 
-  </footer>
+  <!-- footer  -->
+  <footer class="bg-[#030712]">
+    <div class="max-w-screen-xl mx-auto px-2 md:px-4 lg:px-0 py-28">
+      <div class="flex justify-between items-center">
+        <div class="text-white">
+          <h1 class="text-2xl md:text-4xl font-extrabold mb-4">Smart-Ticket</h1>
+          <p class="w-3/4 md:w-2/3">
+            Smart-Ticket is a digital platform to make your daily commuting
+            better.
+          </p>
+        </div>
+        <div>
+          <p class="text-white text-center text-xl mb-2">Download our app</p>
+          <img src="./images/playstore.png" alt="" />
+        </div>
+      </div>
+      <p class="outline-dashed outline-1 text-white w-full mt-12"></p>
+      <div class="md:flex justify-between text-white pt-8 text-center md:text-wrap">
+        <p>@all rights reserved, Smart-Ticket services limited.2024</p>
+        <ul class="flex gap-5 mt-4 md:mt-0">
+          <li>Terms & condition</li>
+          <li>Return & refund policy</li>
+          <li>Privacy policy</li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
